<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="150dp"
    android:layout_marginHorizontal="10dp"
    android:layout_marginVertical="5dp"
    app:cardBackgroundColor="@color/secondaryTextColor"
    app:cardElevation="8dp"
    app:cardCornerRadius="15dp"
    app:strokeWidth="5dp"
    app:strokeColor="@color/secondaryColor">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_poster"
            android:layout_width="120dp"
            android:layout_height="match_parent"
            android:src="@drawable/poster_aquaman"
            android:scaleType="centerCrop"/>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/title_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="textStart"
                android:text="@string/title_film"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/roboto_reg"
                android:textSize="14sp"/>

            <TextView
                android:id="@+id/genre_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:paddingTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="textStart"
                android:text="@string/genre_film"
                android:drawablePadding="2dp"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/roboto_reg"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_episode" />

            <TextView
                android:id="@+id/date_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:paddingTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="textStart"
                android:text="@string/date_film"
                android:drawablePadding="2dp"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/roboto_reg"
                android:textSize="12sp"
                app:drawableStartCompat="@drawable/ic_date" />

            <TextView
                android:id="@+id/desc_film"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginStart="15dp"
                android:layout_marginEnd="10dp"
                android:textAlignment="textStart"
                android:text="@string/desc_film"
                android:textColor="@color/primaryTextColor"
                android:fontFamily="@font/roboto_reg"
                android:textSize="12sp" />

        </LinearLayout>

    </LinearLayout>

</com.google.android.material.card.MaterialCardView>